deployments/arr/overseerr/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr-service
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 5055
      targetPort: overseerr
  selector:
    app: overseerr
    part-of: overseerr
