deployments/arr/overseerr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr-ingress
  namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.overseerr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: overseerr-service
          port: 5055
    - match: Host(`overseerr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: overseerr-service
          port: 5055
      middlewares:
        - name: media-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
